Fix specs2 version