@@ -121,7 +121,7 @@
             <dependency>
                 <groupId>org.specs2</groupId>
                 <artifactId>specs2_${scala.version}</artifactId>
-                <version>2.4.6</version>
+                <version>2.4.2</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -165,8 +165,12 @@
                             <arg>-deprecation</arg>
                         </args>
                         <jvmArgs>
+                            <jvmArg>-server</jvmArg>
                             <jvmArg>-Xms256m</jvmArg>
-                            <jvmArg>-Xmx2048m</jvmArg>
+                            <jvmArg>-Xmx1024m</jvmArg>
+                            <jvmArg>-Xss1m</jvmArg>
+                            <jvmArg>-XX:MaxPermSize=512m</jvmArg>
+                            <jvmArg>-XX:+TieredCompilation</jvmArg>
                         </jvmArgs>
                         <charset>${project.build.sourceEncoding}</charset>
                     </configuration>
@@ -183,6 +187,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.17</version>
                     <configuration>
+                        <argLine>-server -Xms128m -Xmx512m -XX:MaxPermSize=256m -XX:+TieredCompilation</argLine>
                         <includes>
                             <include>**/*Spec.class</include>
                         </includes>
